<resources>
    <string name="app_name">西瓜快传</string>
    <string name="menu_about">关于</string>
    <string name="menu_history">接收目录</string>

    <string name="setting_illustrate">点解设置查看具体使用说明</string>
    <string name="setting_action">设置</string>

    <string name="main_i_want_send">我要发送</string>
    <string name="main_i_want_receive">我要接收</string>
    <string name="main_i_file_2_PC">传文件到电脑</string>
    <string name="main_name_hint">输入昵称</string>

    <string name="title_radar_scan">扫描好友</string>

    <string name="wifi_hotspot_fail">创建WiFi热点失败</string>
    <string name="wifi_hotspot_creating">正在创建WiFi热点</string>

    <string name="file_select">选择文件</string>
    <string name="picture">图片</string>
    <string name="app">应用</string>
    <string name="music">音乐</string>

    <string name="send_connect_to">发送端连接到： %s </string>

    <string name="please_select_file">请选择文件</string>
    <string name="title_activity_file_transfering">正在传输</string>
    <string name="file_transfering_exit">你确定要退出吗？</string>
    <string name="ok">确定</string>

    <string name="send_abort_self">对端 %s 退出</string>
    <string name="file_send_complete">发送完成</string>
    <string name="file_has_completed">已完成</string>
    <string name="file_wait">等待</string>
    <string name="file_sending">正在发送</string>
    <string name="file_receiving">正在接收</string>
    <string name="file_receive_completed">接收完成</string>

    <string name="about_use">使用</string>
    <string name="about_use_content">1. 在有WiFi的情况下，两个设备同时接入该WiFi\n2. 接收端点击我要接收，发送端点击我要发送\n3. 然后发送端会发现接收端，此时发送端点击发现的图标，接收端显示发送端的图标\n4. 接收端点击显示的图标，就开始进行文件传输了\n5. 若没有WiFi，接收端点击我要接收，此时接收端会建立WiFi热点，发送端连接此热点即可\n</string>
    <string name="about_thanks">感谢</string>
    <string name="about_thanks_content">同事 杨蔚\n老婆 方泰</string>

    <string name="about_library">引用库</string>
    <string name="about_library_content">com.android.support:support-v4:22.2.0\ncom.android.support:appcompat-v7:22.2.0\ncom.android.support:design:22.2.0\ncom.android.support:recyclerview-v7:22.+\ncom.android.support:cardview-v7:22.0.0\ncom.github.bumptech.glide:glide:3.5.2\nRadarScanView\nrandomtextview\nrippleview\nrippleoutlayout\np2pmanager\nhttpServer\n</string>

    <string name="about_receive_path">接收路径</string>

    <string name="no_received_content">无接收内容...</string>
</resources>
